Attempting to fix horizontal scrolling in code blocks in Chrome on iOS

--- a/static/custom.css
+++ b/static/custom.css
@@ -19,4 +19,5 @@
 
   pre code {
     overflow-x: auto;
+    white-space: pre;
   }
